[package]
name = "reth-payload-validator"
version = "0.1.0"
edition = "2021"
default-run = "reth-payload-validator"

# Here to support the Docker build.
[[bin]]
name = "reth-payload-validator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[dependencies]
alloy-primitives = "0.8.15"
async-trait = "0.1.73"
clap = "4.4.5"
derivative = "2.2.0"
eyre = "0.6.8"
hex = "0.4.3"
jsonrpsee = "0.24.7"
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2", package = "reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2", package = "reth-db" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2", package = "reth-evm" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2", package = "reth-ethereum-forks" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2", package = "reth-node-ethereum" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2", package = "reth-tracing" }
serde = "1.0.188"
serde_json = "1.0.107"
serde_with = "3.3.0"
tokio = "1.35"
uuid = "1.6.1"

[dev-dependencies]
tokio = "1.32.0"
